// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeftNavBuilder buildAssessmentTestLinks should build links for assessments 1`] = `
<TestViewLeftNavLink
  link={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": -1,
      "key": "Issues",
      "name": "some title",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "status": -2,
      "title": "-1: some title (passed)",
      "url": "",
    }
  }
  renderIcon={[Function]}
/>
`;

exports[`LeftNavBuilder buildAssessmentTestLinks should build links for assessments 2`] = `
<LeftNavStatusIcon
  item={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": -1,
      "key": "Issues",
      "name": "some title",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "status": -2,
      "title": "-1: some title (passed)",
      "url": "",
    }
  }
/>
`;

exports[`LeftNavBuilder buildAssessmentTestLinks should build links for assessments 3`] = `
<TestViewLeftNavLink
  link={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": 0,
      "key": "Issues",
      "name": "some title",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "status": -2,
      "title": "0: some title (passed)",
      "url": "",
    }
  }
  renderIcon={[Function]}
/>
`;

exports[`LeftNavBuilder buildAssessmentTestLinks should build links for assessments 4`] = `
<LeftNavStatusIcon
  item={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": 0,
      "key": "Issues",
      "name": "some title",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "status": -2,
      "title": "0: some title (passed)",
      "url": "",
    }
  }
/>
`;

exports[`LeftNavBuilder buildOverviewLink should build overview link 1`] = `
<OverviewLeftNavLink
  link={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": -1,
      "key": "Overview",
      "name": "Overview",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "percentComplete": 75,
      "title": "Overview 75% Completed",
      "url": "",
    }
  }
/>
`;

exports[`LeftNavBuilder buildVisualizationConfigurationLink should build link using configuration 1`] = `
<TestViewLeftNavLink
  link={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": -1,
      "key": "Issues",
      "name": "some title",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "url": "",
    }
  }
  renderIcon={[Function]}
/>
`;

exports[`LeftNavBuilder buildVisualizationConfigurationLink should build link using configuration 2`] = `
<LeftNavIndexIcon
  item={
    Object {
      "forceAnchor": true,
      "iconProps": Object {
        "className": "hidden",
      },
      "index": -1,
      "key": "Issues",
      "name": "some title",
      "onClickNavLink": [Function],
      "onRenderNavLink": [Function],
      "url": "",
    }
  }
/>
`;
